@@ -1,5 +1,5 @@
 [tox]
-envlist = {py37,py38,py39,py310}-{sqlite,postgresql},pypy3-{sqlite,postgresql}
+envlist = {py37,py38,py39,py310}-{sqlite,postgresql}
 
 [testenv]
 commands =
@@ -7,8 +7,7 @@ commands =
     coverage report --include=./trytond/* --omit=*/tests/*
 deps =
     coverage
-    {py37,py38,py39,py310}-postgresql: psycopg2 >= 2.5
-    pypy3-postgresql: psycopg2cffi >= 2.5
+    postgresql: psycopg2 >= 2.7.0
 setenv =
     sqlite: TRYTOND_DATABASE_URI={env:SQLITE_URI:sqlite://}
     postgresql: TRYTOND_DATABASE_URI={env:POSTGRESQL_URI:postgresql://}
